# nudge-mcp

./: .gitignore  .mcp.json  calibrate.py  config.py  log.py  nudge  pricing.py  pyproject.toml  scrooge  server.json  server.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml  release.yml
core/: __init__.py  analysis.py  claude.py  copilot.py  loaders.py  model_analysis.py
docs/: CONTRIBUTING.md  README.md
docs/superpowers/plans/: 2026-04-19-github-actions-ci-release.md  2026-04-19-server-refactor.md  2026-04-20-model-efficiency.md
docs/superpowers/specs/: 2026-04-19-github-actions-ci-release-design.md  2026-04-19-server-refactor-design.md  2026-04-20-model-efficiency-design.md
tests/: conftest.py  test_analysis.py  test_claude.py  test_copilot.py  test_loaders.py  test_model_analysis.py  test_server.py
