[project]
name = "nudge-mcp"
version = "0.0.2"
description = "MCP server for Claude Code and GitHub Copilot CLI session token usage and cost data"
readme = "docs/README.md"
requires-python = ">=3.12"
dependencies = ["fastmcp>=2.0.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "lib"]
exclude = ["tests", "docs"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
