[project]
name = "nudge-mcp"
version = "0.1.1"
description = "MCP server for Claude Code and GitHub Copilot CLI session token usage and cost data"
readme = "docs/README.md"
requires-python = ">=3.12"
dependencies = ["fastmcp>=2.0.0"]

[project.scripts]
nudge-mcp = "server:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "server.py",
  "config.py",
  "pricing.py",
  "log.py",
  "calibrate.py",
  "core/**/*.py",
  "lib/**/*.py",
]
exclude = ["tests", "docs"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
