[project]
name = "nudge-mcp"
version = "0.1.1"
description = "MCP server for Claude Code and GitHub Copilot CLI session token usage and cost data"
readme = "docs/README.md"
requires-python = ">=3.12"
dependencies = ["fastmcp>=2.0.0"]

[project.scripts]
nudge-mcp = "server:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "server.py",
  "config.py",
  "pricing.py",
  "core/**/*.py",
  "lib/**/*.py",
]
exclude = ["tests", "docs"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"server.py" = ["E402"]
"tests/conftest.py" = ["E402"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportPrivateUsage = false

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.15.11",
]
